--- a/html5_css3/grid/index.html
+++ b/html5_css3/grid/index.html
@@ -10,5 +10,86 @@
 </head>
 <body>
 
+<section class="item item-maindish">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+    <div class="category">MAIN DISH</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+  </a>
+</section>
+<section class="item item-appetizer">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="前菜" class="image">
+    <div class="category">APPETIZER</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  </a>
+</section>
+<section class="item item-column">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="コラム" class="image">
+    <div class="category">COLUMN</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+  </a>
+</section>
+<section class="item item-breaktime">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="おやつの時間" class="image">
+    <div class="category">BREAK TIME</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  </a>
+</section>
+
+<section class="item item-maindish">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+    <div class="category">MAIN DISH</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+  </a>
+</section>
+<section class="item item-appetizer">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="前菜" class="image">
+    <div class="category">APPETIZER</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  </a>
+</section>
+<section class="item item-column">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="コラム" class="image">
+    <div class="category">COLUMN</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+  </a>
+</section>
+<section class="item item-breaktime">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="おやつの時間" class="image">
+    <div class="category">BREAK TIME</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  </a>
+</section>
+
+<section class="item item-maindish">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+    <div class="category">MAIN DISH</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+  </a>
+</section>
+<section class="item item-appetizer">
+  <a href="#">
+    <img src="images/image_s_1.jpg" alt="前菜" class="image">
+    <div class="category">APPETIZER</div>
+    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  </a>
+</section>
+
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script type="text/javascript">
+  new Masonry('body', {
+    itemSelector: '.item',
+    columnWidth: 180,
+    gutter: 4
+  });
+</script>
 </body>
 </html>
