--- a/html5_css3/grid/index.html
+++ b/html5_css3/grid/index.html
@@ -9,87 +9,136 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <header class="header item">
+    <h1><a href="#"><img src="images/logo.png" alt="SAMPLE SITE" class="logo"></a></h1>
+    <nav class="nav">
+      <ul>
+        <li class="nav-item"><a href="#">HOME</a></li>
+        <li class="nav-item"><a href="#">ABOUT</a></li>
+        <li class="nav-item"><a href="#">MAIN DISH</a></li>
+        <li class="nav-item"><a href="#">APPETIZER</a></li>
+        <li class="nav-item"><a href="#">BREAK TIME</a></li>
+        <li class="nav-item"><a href="#">COLUMN</a></li>
+        <li class="nav-item"><a href="#">OTHER</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="item item-l item-maindish">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+      <div class="category">LARGE MAIN DISH</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+    </a>
+  </section>
 
-<section class="item item-maindish">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
-    <div class="category">MAIN DISH</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
-  </a>
-</section>
-<section class="item item-appetizer">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="前菜" class="image">
-    <div class="category">APPETIZER</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  </a>
-</section>
-<section class="item item-column">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="コラム" class="image">
-    <div class="category">COLUMN</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
-  </a>
-</section>
-<section class="item item-breaktime">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="おやつの時間" class="image">
-    <div class="category">BREAK TIME</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  </a>
-</section>
+  <section class="item item-m item-maindish">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+      <div class="category">MIDDLE MAIN DISH</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+    </a>
+  </section>
 
-<section class="item item-maindish">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
-    <div class="category">MAIN DISH</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
-  </a>
-</section>
-<section class="item item-appetizer">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="前菜" class="image">
-    <div class="category">APPETIZER</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  </a>
-</section>
-<section class="item item-column">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="コラム" class="image">
-    <div class="category">COLUMN</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
-  </a>
-</section>
-<section class="item item-breaktime">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="おやつの時間" class="image">
-    <div class="category">BREAK TIME</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  </a>
-</section>
+  <section class="item item-m item-maindish">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+      <div class="category">MIDDLE MAIN DISH</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+    </a>
+  </section>
 
-<section class="item item-maindish">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
-    <div class="category">MAIN DISH</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
-  </a>
-</section>
-<section class="item item-appetizer">
-  <a href="#">
-    <img src="images/image_s_1.jpg" alt="前菜" class="image">
-    <div class="category">APPETIZER</div>
-    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-  </a>
-</section>
+  <section class="item item-maindish">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+      <div class="category">MAIN DISH</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+    </a>
+  </section>
+  <section class="item item-appetizer">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="前菜" class="image">
+      <div class="category">APPETIZER</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </a>
+  </section>
 
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-<script type="text/javascript">
-  new Masonry('body', {
-    itemSelector: '.item',
-    columnWidth: 180,
-    gutter: 4
-  });
-</script>
+  <section class="item item-m item-breaktime">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="おやつの時間" class="image">
+      <div class="category">BREAK TIME</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </a>
+  </section>
+
+  <section class="item item-column">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="コラム" class="image">
+      <div class="category">COLUMN</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+    </a>
+  </section>
+
+  <section class="item item-breaktime">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="おやつの時間" class="image">
+      <div class="category">BREAK TIME</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </a>
+  </section>
+
+  <section class="item item-maindish">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+      <div class="category">MAIN DISH</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+    </a>
+  </section>
+  <section class="item item-appetizer">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="前菜" class="image">
+      <div class="category">APPETIZER</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </a>
+  </section>
+  <section class="item item-column">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="コラム" class="image">
+      <div class="category">COLUMN</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+    </a>
+  </section>
+  <section class="item item-breaktime">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="おやつの時間" class="image">
+      <div class="category">BREAK TIME</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </a>
+  </section>
+
+  <section class="item item-maindish">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="メインディッシュ" class="image">
+      <div class="category">MAIN DISH</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nisi eos totam aliquid pariatur vel sit, accusantium. Laborum consequuntur suscipit necessitatibus alias voluptate distinctio modi, assumenda optio eligendi placeat, aliquid.</p>
+    </a>
+  </section>
+  <section class="item item-appetizer">
+    <a href="#">
+      <img src="images/image_s_1.jpg" alt="前菜" class="image">
+      <div class="category">APPETIZER</div>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </a>
+  </section>
+
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  <script type="text/javascript">
+    window.onload = function() {
+      new Masonry('body', {
+        itemSelector: '.item',
+        columnWidth: 180,
+        gutter: 4
+      });
+    }
+  </script>
 </body>
 </html>
