--- a/html5_css3/sp/index.html
+++ b/html5_css3/sp/index.html
@@ -12,8 +12,13 @@
   <header class="header">
     <p class="site-title-sub">Web designer's portfolio</p>
     <h1 class="site-title">HI, MY NAME IS...</h1>
+    <p class="site-description">Check out some of my works.</p>
+    <div class="buttons">
+      <a href="#about" class="button">LEARN MORE</a>
+      <a href="#content" class="button button-showy">SEND MESSAGE</a>
+    </div>
   </header>
-  <section class="about">
+  <section class="about" id="about">
 
   </section>
   <section class="works">
@@ -22,7 +27,7 @@
   <section class="skills">
 
   </section>
-  <section class="contact">
+  <section class="contact" id="contact">
 
   </section>
   <footer class="footer">
