--- a/html5_css3/sp/index.html
+++ b/html5_css3/sp/index.html
@@ -19,7 +19,13 @@
     </div>
   </header>
   <section class="about" id="about">
-
+    <h2 class="heading">ABOUT ME</h2>
+    <p class="about-text">
+      はじめまして。自己紹介を書きますよ。
+    </p>
+    <p class="about-text">
+      このサイトについて書きますよ。
+    </p>
   </section>
   <section class="works">
 
