--- a/html5_css3/sp/index.html
+++ b/html5_css3/sp/index.html
@@ -28,7 +28,61 @@
     </p>
   </section>
   <section class="works">
-
+    <h2 class="heading">WORKS</h2>
+    <div class="works-wrapper">
+      <div class="work-box">
+        <img src="images/1.jpg" alt="いちまいめ" class="work-image">
+        <div class="work-description">
+          <div class="work-description-inner">
+            <p class="work-text">
+              ひとつめの制作事例が入ります。<br>
+              簡単な説明が入ります。<br>
+              ツール : XXX, XXX, XXX <br>
+              <a href="#" class="button button-ghost">READ MORE</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="work-box">
+        <img src="images/2.jpg" alt="にまいめ" class="work-image">
+        <div class="work-description">
+          <div class="work-description-inner">
+            <p class="work-text">
+              ふたつめの制作事例が入ります。<br>
+              簡単な説明が入ります。<br>
+              ツール : XXX, XXX, XXX <br>
+              <a href="#" class="button button-ghost">READ MORE</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="work-box">
+        <img src="images/3.jpg" alt="さんまいめ" class="work-image">
+        <div class="work-description">
+          <div class="work-description-inner">
+            <p class="work-text">
+              みっつめの制作事例が入ります。<br>
+              簡単な説明が入ります。<br>
+              ツール : XXX, XXX, XXX <br>
+              <a href="#" class="button button-ghost">READ MORE</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="work-box">
+        <img src="images/4.jpg" alt="よんまいめ" class="work-image">
+        <div class="work-description">
+          <div class="work-description-inner">
+            <p class="work-text">
+              よっつめの制作事例が入ります。<br>
+              簡単な説明が入ります。<br>
+              ツール : XXX, XXX, XXX <br>
+              <a href="#" class="button button-ghost">READ MORE</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="skills">
 
