--- a/html5_css3/sp/index.html
+++ b/html5_css3/sp/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>シングルページレイアウト</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -85,7 +86,30 @@
     </div>
   </section>
   <section class="skills">
-
+    <h2 class="heading">MY SKILLS</h2>
+    <div class="skills-wrapper">
+      <div class="skill-box">
+        <i class="skill-icon fa fa-lightbulb-o"></i>
+        <div class="skill-title">IDEA</div>
+        <p class="skill-text">
+          すきるについて。すきるについて。すきるについて。すきるについて。すきるについて。
+        </p>
+      </div>
+      <div class="skill-box">
+        <i class="skill-icon fa fa-paint-brush"></i>
+        <div class="skill-title">DESIGN</div>
+        <p class="skill-text">
+          でざいんについて。でざいんについて。でざいんについて。でざいんについて。でざいんについて。
+        </p>
+      </div>
+      <div class="skill-box">
+        <i class="skill-icon fa fa-code"></i>
+        <div class="skill-title">CODING</div>
+        <p class="skill-text">
+          コーディングについて。コーディングについて。コーディングについて。コーディングについて。コーディングについて。
+        </p>
+      </div>
+    </div>
   </section>
   <section class="contact" id="contact">
 
