--- a/html5_css3/sp/index.html
+++ b/html5_css3/sp/index.html
@@ -112,10 +112,15 @@
     </div>
   </section>
   <section class="contact" id="contact">
-
+  <h2 class="heading">CONTACT</h2>
+  <form class="contact-form">
+    <input type="text" name="name" placeholder="NAME">
+    <textarea name="message" placeholder="MESSAGE"></textarea>
+    <input type="submit" value="SEND">
+  </form>
   </section>
   <footer class="footer">
-
+    &copy; sample
   </footer>
 </body>
 </html>
